almost done version

--- a/Python_HRMS/i18n/strings_en.json
+++ b/Python_HRMS/i18n/strings_en.json
@@ -18,5 +18,41 @@
   "report_training": "Training Reports (Dept/Days Filter)",
   "report_custom": "Custom Query/Export",
   "footer": "Status: SQLite backend (./data/hrms.db). Configure DB and export paths first.",
-  "lang_label": "Language"
+  "lang_label": "Language",
+  "area_window_title": "Area Maintenance",
+  "section_window_title": "Department Maintenance",
+  "job_window_title": "Function Maintenance",
+  "btn_area": "Area",
+  "btn_section": "Department",
+  "btn_job": "Function",
+  "col_emp_id": "EMP_ID",
+  "col_dept_code": "Dept Code",
+  "col_dept_desc": "Dept Name",
+  "col_c_name": "Name",
+  "col_title": "Title",
+  "col_on_board_date": "On Board",
+  "col_shift": "Shift",
+  "col_area": "Area",
+  "col_function": "Function",
+  "col_meno": "Memo",
+  "col_active": "Active",
+  "col_certify_id": "Certify ID",
+  "col_certify_name": "Certify Name",
+  "col_certify_time": "Train Time",
+  "col_certify_grade": "Grade",
+  "col_certify_type": "Type",
+  "col_remark": "Remark",
+  "col_tool_id": "Tool ID",
+  "col_certify_date": "Certify Date",
+  "col_overdue_days": "Overdue Days",
+  "col_area_desc": "Area Name",
+  "col_l_job": "Job Code",
+  "col_l_job_desc": "Job Name",
+  "col_s_account": "Account",
+  "col_update_date": "Update Date",
+  "col_education": "Education",
+  "col_g_school": "School",
+  "col_major": "Major",
+  "col_dept": "Dept",
+  "col_tool": "Tool"
 }
