--- a/Python_HRMS/i18n/strings_zh.json
+++ b/Python_HRMS/i18n/strings_zh.json
@@ -18,5 +18,41 @@
   "report_training": "訓練報表（部門/天數篩選）",
   "report_custom": "自訂查詢/匯出",
   "footer": "狀態：後端 SQLite（預設 ./data/hrms.db） | 請先設定資料庫與匯出路徑",
-  "lang_label": "介面語言"
+  "lang_label": "介面語言",
+  "area_window_title": "區域維護",
+  "section_window_title": "部門維護",
+  "job_window_title": "職務/Function 維護",
+  "btn_area": "區域維護",
+  "btn_section": "部門維護",
+  "btn_job": "職務/Function",
+  "col_emp_id": "員工編號",
+  "col_dept_code": "部門代碼",
+  "col_dept_desc": "部門名稱",
+  "col_c_name": "姓名",
+  "col_title": "職稱",
+  "col_on_board_date": "到職日",
+  "col_shift": "班別",
+  "col_area": "區域",
+  "col_function": "功能別",
+  "col_meno": "備註",
+  "col_active": "啟用",
+  "col_certify_id": "證照代碼",
+  "col_certify_name": "證照名稱",
+  "col_certify_time": "訓練時數",
+  "col_certify_grade": "等級",
+  "col_certify_type": "類型",
+  "col_remark": "備註",
+  "col_tool_id": "機台代碼",
+  "col_certify_date": "證照日期",
+  "col_overdue_days": "逾期天數",
+  "col_area_desc": "區域名稱",
+  "col_l_job": "職務代碼",
+  "col_l_job_desc": "職務名稱",
+  "col_s_account": "帳號",
+  "col_update_date": "更新日期",
+  "col_education": "學歷",
+  "col_g_school": "學校",
+  "col_major": "科系",
+  "col_dept": "部門",
+  "col_tool": "機台"
 }
