--- a/Python_HRMS/i18n/strings_ja.json
+++ b/Python_HRMS/i18n/strings_ja.json
@@ -18,5 +18,41 @@
   "report_training": "訓練レポート（部門/日数フィルタ）",
   "report_custom": "カスタム検索/出力",
   "footer": "状態：SQLite バックエンド（./data/hrms.db）。DB と出力先を設定してください。",
-  "lang_label": "言語"
+  "lang_label": "言語",
+  "area_window_title": "エリア管理",
+  "section_window_title": "部門管理",
+  "job_window_title": "職務/Function 管理",
+  "btn_area": "エリア管理",
+  "btn_section": "部門管理",
+  "btn_job": "職務/Function",
+  "col_emp_id": "社員ID",
+  "col_dept_code": "部門コード",
+  "col_dept_desc": "部門名",
+  "col_c_name": "氏名",
+  "col_title": "職位",
+  "col_on_board_date": "入社日",
+  "col_shift": "シフト",
+  "col_area": "エリア",
+  "col_function": "職務",
+  "col_meno": "メモ",
+  "col_active": "有効",
+  "col_certify_id": "認定ID",
+  "col_certify_name": "認定名",
+  "col_certify_time": "訓練時間",
+  "col_certify_grade": "グレード",
+  "col_certify_type": "タイプ",
+  "col_remark": "備考",
+  "col_tool_id": "設備ID",
+  "col_certify_date": "認定日",
+  "col_overdue_days": "経過日数",
+  "col_area_desc": "エリア名",
+  "col_l_job": "職務コード",
+  "col_l_job_desc": "職務名",
+  "col_s_account": "アカウント",
+  "col_update_date": "更新日",
+  "col_education": "学歴",
+  "col_g_school": "学校",
+  "col_major": "専攻",
+  "col_dept": "部門",
+  "col_tool": "設備"
 }
