--- a/Python_HRMS/i18n/strings_en.json
+++ b/Python_HRMS/i18n/strings_en.json
@@ -19,6 +19,9 @@
   "report_custom": "Custom Query/Export",
   "footer": "Status: SQLite backend (./data/hrms.db). Configure DB and export paths first.",
   "lang_label": "Language",
+  "status_ready": "Ready",
+  "status_user_version": "User: {user} | Version: {version}",
+  "btn_fullscreen": "Full Screen",
   "area_window_title": "Area Maintenance",
   "section_window_title": "Department Maintenance",
   "job_window_title": "Function Maintenance",
@@ -54,5 +57,32 @@
   "col_g_school": "School",
   "col_major": "Major",
   "col_dept": "Dept",
-  "col_tool": "Tool"
+  "col_tool": "Tool",
+  "col_sex": "Sex",
+  "col_birthday": "Birthday",
+  "col_personal_id": "Personal ID",
+  "col_home_phone": "Home Phone",
+  "col_current_phone": "Current Phone",
+  "col_cell_phone": "Cell Phone",
+  "col_living_place": "Living Place",
+  "col_living_place2": "Living Place2",
+  "col_emg_name1": "EMG Name1",
+  "col_emg_phone1": "EMG Phone1",
+  "col_emg_rel1": "Relation1",
+  "col_emg_name2": "EMG Name2",
+  "col_emg_phone2": "EMG Phone2",
+  "col_emg_rel2": "Relation2",
+  "col_perf_year": "Perf Year",
+  "col_excomp_year": "Excomp Year",
+  "col_ex_compy_type": "Ex Company Type",
+  "password": "Password",
+  "login": "Login",
+  "cancel": "Cancel",
+  "msg_required_cert_tool": "Please provide Certify ID and Tool ID",
+  "overdue_days_placeholder": "Days, e.g. 660",
+  "overdue_days_label": "Overdue days greater or equal to",
+  "msg_required_area": "Area code is required",
+  "msg_required_dept": "Dept code is required",
+  "msg_duplicate_record": "Duplicate record, switched to update",
+  "msg_create_success": "Created successfully"
 }
