--- a/Python_HRMS/i18n/strings_ja.json
+++ b/Python_HRMS/i18n/strings_ja.json
@@ -1,29 +1,32 @@
-﻿{
+{
   "title": "HRMS 人事・訓練管理",
-  "heading": "人事・訓練管理",
-  "sub": "主要機能：社員基本/個人/学歴、認定設定と記録、権限、レポート、期限チェック。バックエンド：SQLite。",
+  "heading": "人力資源と訓練管理",
+  "sub": "中核機能：社員マスタ・個人情報・学歴、証照設定/記録、権限、レポート、期限チェック。バックエンド：SQLite。",
   "section_employee": "社員情報",
-  "employee_basic": "社員マスタ / 基本情報",
+  "employee_basic": "社員マスタ / 基本資料",
   "employee_personal": "個人情報 / 連絡先",
-  "employee_education": "学歴",
-  "section_certify": "認定・訓練",
-  "certify_items": "認定設定",
-  "certify_tool_map": "認定-設備対応",
-  "certify_record": "訓練/認定記録",
+  "employee_education": "学歴 / 卒業情報",
+  "section_certify": "証照と訓練",
+  "certify_items": "証照設定",
+  "certify_tool_map": "証照-設備対応",
+  "certify_record": "訓練/証照記録",
   "certify_overdue": "期限チェック",
   "section_admin": "管理・権限",
   "authority": "権限管理",
-  "sync_mes": "CSV 出力 / 外部連携",
+  "sync_mes": "CSV 出力 / 外部同期",
   "section_reports": "レポート・分析",
   "report_training": "訓練レポート（部門/日数フィルタ）",
   "report_custom": "カスタム検索/出力",
-  "footer": "状態：SQLite バックエンド（./data/hrms.db）。DB と出力先を設定してください。",
+  "footer": "状態：SQLite バックエンド（既定 ./data/hrms.db）| 先にDBと出力パスを設定してください",
   "lang_label": "言語",
-  "area_window_title": "エリア管理",
-  "section_window_title": "部門管理",
-  "job_window_title": "職務/Function 管理",
-  "btn_area": "エリア管理",
-  "btn_section": "部門管理",
+  "status_ready": "準備完了",
+  "status_user_version": "ユーザー：{user} | バージョン：{version}",
+  "btn_fullscreen": "全画面",
+  "area_window_title": "エリア保守",
+  "section_window_title": "部門保守",
+  "job_window_title": "職務/Function 保守",
+  "btn_area": "エリア保守",
+  "btn_section": "部門保守",
   "btn_job": "職務/Function",
   "col_emp_id": "社員ID",
   "col_dept_code": "部門コード",
@@ -36,14 +39,14 @@
   "col_function": "職務",
   "col_meno": "メモ",
   "col_active": "有効",
-  "col_certify_id": "認定ID",
-  "col_certify_name": "認定名",
+  "col_certify_id": "証照ID",
+  "col_certify_name": "証照名",
   "col_certify_time": "訓練時間",
   "col_certify_grade": "グレード",
-  "col_certify_type": "タイプ",
+  "col_certify_type": "種別",
   "col_remark": "備考",
   "col_tool_id": "設備ID",
-  "col_certify_date": "認定日",
+  "col_certify_date": "証照日",
   "col_overdue_days": "経過日数",
   "col_area_desc": "エリア名",
   "col_l_job": "職務コード",
@@ -54,5 +57,32 @@
   "col_g_school": "学校",
   "col_major": "専攻",
   "col_dept": "部門",
-  "col_tool": "設備"
+  "col_tool": "設備",
+  "col_sex": "性別",
+  "col_birthday": "誕生日",
+  "col_personal_id": "個人ID",
+  "col_home_phone": "自宅電話",
+  "col_current_phone": "現住電話",
+  "col_cell_phone": "携帯",
+  "col_living_place": "現住所",
+  "col_living_place2": "現住所2",
+  "col_emg_name1": "緊急連絡者1",
+  "col_emg_phone1": "緊急電話1",
+  "col_emg_rel1": "関係1",
+  "col_emg_name2": "緊急連絡者2",
+  "col_emg_phone2": "緊急電話2",
+  "col_emg_rel2": "関係2",
+  "col_perf_year": "勤続年",
+  "col_excomp_year": "前社年数",
+  "col_ex_compy_type": "前社種類",
+  "password": "パスワード",
+  "login": "ログイン",
+  "cancel": "キャンセル",
+  "msg_required_cert_tool": "証照ID と 設備ID を入力/選択してください",
+  "overdue_days_placeholder": "日数（例：660）",
+  "overdue_days_label": "期限日数が以上",
+  "msg_required_area": "エリアコードを入力してください",
+  "msg_required_dept": "部門コードを入力してください",
+  "msg_duplicate_record": "重複データのため更新に切替えました",
+  "msg_create_success": "新規作成に成功しました"
 }
