--- a/Python_HRMS/i18n/strings_zh.json
+++ b/Python_HRMS/i18n/strings_zh.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "title": "HRMS 人資與訓練管理",
   "heading": "人力資源與訓練管理",
   "sub": "核心功能：員工主檔、個資、學歷、證照設定/紀錄、權限、報表與到期檢核。後端：SQLite。",
@@ -17,8 +17,11 @@
   "section_reports": "報表與分析",
   "report_training": "訓練報表（部門/天數篩選）",
   "report_custom": "自訂查詢/匯出",
-  "footer": "狀態：後端 SQLite（預設 ./data/hrms.db） | 請先設定資料庫與匯出路徑",
+  "footer": "狀態：後端 SQLite（預設 ./data/hrms.db）| 請先設定資料庫與匯出路徑",
   "lang_label": "介面語言",
+  "status_ready": "就緒",
+  "status_user_version": "使用者：{user} | 版本：{version}",
+  "btn_fullscreen": "全螢幕",
   "area_window_title": "區域維護",
   "section_window_title": "部門維護",
   "job_window_title": "職務/Function 維護",
@@ -33,7 +36,7 @@
   "col_on_board_date": "到職日",
   "col_shift": "班別",
   "col_area": "區域",
-  "col_function": "功能別",
+  "col_function": "職務",
   "col_meno": "備註",
   "col_active": "啟用",
   "col_certify_id": "證照代碼",
@@ -54,5 +57,32 @@
   "col_g_school": "學校",
   "col_major": "科系",
   "col_dept": "部門",
-  "col_tool": "機台"
+  "col_tool": "機台",
+  "col_sex": "性別",
+  "col_birthday": "生日",
+  "col_personal_id": "身分證號",
+  "col_home_phone": "住家電話",
+  "col_current_phone": "現住電話",
+  "col_cell_phone": "手機",
+  "col_living_place": "現居地",
+  "col_living_place2": "現居地2",
+  "col_emg_name1": "緊急聯絡人1",
+  "col_emg_phone1": "緊急電話1",
+  "col_emg_rel1": "關係1",
+  "col_emg_name2": "緊急聯絡人2",
+  "col_emg_phone2": "緊急電話2",
+  "col_emg_rel2": "關係2",
+  "col_perf_year": "年資",
+  "col_excomp_year": "前公司年資",
+  "col_ex_compy_type": "前公司類型",
+  "password": "密碼",
+  "login": "登入",
+  "cancel": "取消",
+  "msg_required_cert_tool": "請輸入/選擇 證照ID 與 機台ID",
+  "overdue_days_placeholder": "天數，例如 660",
+  "overdue_days_label": "逾期天數大於等於",
+  "msg_required_area": "請輸入區域代碼",
+  "msg_required_dept": "請輸入部門代碼",
+  "msg_duplicate_record": "資料重複，已改為更新",
+  "msg_create_success": "新增成功"
 }
