1st interface optimize

--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -1,6 +1,6 @@
 ﻿{
-  "title": "HRMS - HR & Training",
-  "heading": "Human Resources & Training",
+  "title": "HRMS_NEW - HR & Training",
+  "heading": "HRMS_NEW Human Resources & Training",
   "sub": "Core: employee master/personal/education, certification setup & records, authority, reports, overdue check. Backend: SQLite.",
   "section_employee": "Employee",
   "employee_basic": "Employee Master / Basic",
@@ -22,6 +22,24 @@
   "status_ready": "Ready",
   "status_user_version": "User: {user} | Version: {version}",
   "btn_fullscreen": "Full Screen",
+  "theme_label": "Theme",
+  "theme_light": "Light",
+  "theme_dark": "Dark",
+  "refresh": "Refresh",
+  "export_csv": "Export CSV",
+  "only_active": "Only Active",
+  "create": "Create",
+  "update": "Update",
+  "delete": "Delete",
+  "active": "Active",
+  "login_title": "Login",
+  "warn": "Warning",
+  "error": "Error",
+  "info": "Info",
+  "msg_account_required": "Please enter an account",
+  "msg_account_invalid": "Account not found or inactive",
+  "msg_password_invalid": "Incorrect password",
+  "msg_export_csv_done": "CSV exported to: {path}",
   "area_window_title": "Area Maintenance",
   "section_window_title": "Department Maintenance",
   "job_window_title": "Function Maintenance",
@@ -40,6 +58,7 @@
   "col_meno": "Memo",
   "col_active": "Active",
   "col_certify_id": "Certify ID",
+  "col_certify_no": "Certify No",
   "col_certify_name": "Certify Name",
   "col_certify_time": "Train Time",
   "col_certify_grade": "Grade",
