--- a/i18n/strings_ja.json
+++ b/i18n/strings_ja.json
@@ -1,6 +1,6 @@
 {
-  "title": "HRMS 人事・訓練管理",
-  "heading": "人力資源と訓練管理",
+  "title": "HRMS_NEW 人事・訓練管理",
+  "heading": "HRMS_NEW 人力資源と訓練管理",
   "sub": "中核機能：社員マスタ・個人情報・学歴、証照設定/記録、権限、レポート、期限チェック。バックエンド：SQLite。",
   "section_employee": "社員情報",
   "employee_basic": "社員マスタ / 基本資料",
@@ -22,6 +22,24 @@
   "status_ready": "準備完了",
   "status_user_version": "ユーザー：{user} | バージョン：{version}",
   "btn_fullscreen": "全画面",
+  "theme_label": "テーマ",
+  "theme_light": "ライト",
+  "theme_dark": "ダーク",
+  "refresh": "更新",
+  "export_csv": "CSV 出力",
+  "only_active": "有効のみ",
+  "create": "新規",
+  "update": "更新",
+  "delete": "削除",
+  "active": "有効",
+  "login_title": "ログイン",
+  "warn": "注意",
+  "error": "エラー",
+  "info": "情報",
+  "msg_account_required": "アカウントを入力してください",
+  "msg_account_invalid": "アカウントが存在しないか無効です",
+  "msg_password_invalid": "パスワードが正しくありません",
+  "msg_export_csv_done": "CSV を出力しました: {path}",
   "area_window_title": "エリア保守",
   "section_window_title": "部門保守",
   "job_window_title": "職務/Function 保守",
@@ -40,6 +58,7 @@
   "col_meno": "メモ",
   "col_active": "有効",
   "col_certify_id": "証照ID",
+  "col_certify_no": "証照番号",
   "col_certify_name": "証照名",
   "col_certify_time": "訓練時間",
   "col_certify_grade": "グレード",
