--- a/i18n/strings_zh.json
+++ b/i18n/strings_zh.json
@@ -1,6 +1,6 @@
 {
-  "title": "HRMS 人資與訓練管理",
-  "heading": "人力資源與訓練管理",
+  "title": "HRMS_NEW 人資與訓練管理",
+  "heading": "HRMS_NEW 人力資源與訓練管理",
   "sub": "核心功能：員工主檔、個資、學歷、證照設定/紀錄、權限、報表與到期檢核。後端：SQLite。",
   "section_employee": "員工資料",
   "employee_basic": "員工主檔 / 基本資料",
@@ -22,6 +22,24 @@
   "status_ready": "就緒",
   "status_user_version": "使用者：{user} | 版本：{version}",
   "btn_fullscreen": "全螢幕",
+  "theme_label": "主題",
+  "theme_light": "明亮版",
+  "theme_dark": "黑暗版",
+  "refresh": "重新整理",
+  "export_csv": "匯出 CSV",
+  "only_active": "只顯示啟用",
+  "create": "新增",
+  "update": "更新",
+  "delete": "刪除",
+  "active": "啟用",
+  "login_title": "登入",
+  "warn": "提醒",
+  "error": "錯誤",
+  "info": "資訊",
+  "msg_account_required": "請輸入帳號",
+  "msg_account_invalid": "帳號不存在或未啟用",
+  "msg_password_invalid": "密碼錯誤",
+  "msg_export_csv_done": "CSV 已匯出至：{path}",
   "area_window_title": "區域維護",
   "section_window_title": "部門維護",
   "job_window_title": "職務/Function 維護",
@@ -40,6 +58,7 @@
   "col_meno": "備註",
   "col_active": "啟用",
   "col_certify_id": "證照代碼",
+  "col_certify_no": "證照序號",
   "col_certify_name": "證照名稱",
   "col_certify_time": "訓練時數",
   "col_certify_grade": "等級",
