--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -40,6 +40,31 @@
   "msg_account_invalid": "Account not found or inactive",
   "msg_password_invalid": "Incorrect password",
   "msg_export_csv_done": "CSV exported to: {path}",
+  "education_window_title": "Education / Graduation",
+  "filter_all": "ALL",
+  "filter_edu": "Filter by Education",
+  "filter_school": "Filter by School",
+  "filter_major": "Filter by Major",
+  "authority_window_title": "Authority Management",
+  "basic_window_title": "Employee Master / Basic",
+  "certify_items_window_title": "Certification Setup",
+  "custom_export_window_title": "Custom Query / Export",
+  "overdue_window_title": "Overdue Check",
+  "personal_window_title": "Personal Info / Contacts",
+  "training_report_window_title": "Training Report",
+  "placeholder_account": "Account",
+  "placeholder_password_keep": "Password (leave blank to keep)",
+  "msg_account_select": "Please select or enter an account",
+  "msg_emp_required": "Employee ID is required",
+  "msg_required_basic_fields": "EMP_ID / Dept / Name required",
+  "msg_required_certify_id": "Certify ID is required",
+  "msg_required_emp_cert": "EMP_ID / Certify ID required",
+  "msg_required_emp_select": "Please select or enter EMP_ID",
+  "msg_required_job": "Job code is required",
+  "msg_required_job_select": "Please select or enter job code",
+  "msg_select_row": "Please select a row",
+  "msg_update_done": "Update completed",
+  "date_placeholder": "YYYY-MM-DD",
   "area_window_title": "Area Maintenance",
   "section_window_title": "Department Maintenance",
   "job_window_title": "Function Maintenance",
