--- a/i18n/strings_ja.json
+++ b/i18n/strings_ja.json
@@ -40,6 +40,31 @@
   "msg_account_invalid": "アカウントが存在しないか無効です",
   "msg_password_invalid": "パスワードが正しくありません",
   "msg_export_csv_done": "CSV を出力しました: {path}",
+  "education_window_title": "学歴 / 卒業情報",
+  "filter_all": "すべて",
+  "filter_edu": "学歴で絞り込み",
+  "filter_school": "学校で絞り込み",
+  "filter_major": "専攻で絞り込み",
+  "authority_window_title": "権限管理",
+  "basic_window_title": "社員マスタ / 基本資料",
+  "certify_items_window_title": "証照設定",
+  "custom_export_window_title": "カスタム検索 / 出力",
+  "overdue_window_title": "期限チェック",
+  "personal_window_title": "個人情報 / 連絡先",
+  "training_report_window_title": "訓練レポート",
+  "placeholder_account": "アカウント",
+  "placeholder_password_keep": "パスワード（空欄は変更なし）",
+  "msg_account_select": "アカウントを選択または入力してください",
+  "msg_emp_required": "社員IDは必須です",
+  "msg_required_basic_fields": "社員ID / 部門 / 氏名は必須です",
+  "msg_required_certify_id": "証照IDは必須です",
+  "msg_required_emp_cert": "社員ID / 証照ID は必須です",
+  "msg_required_emp_select": "社員IDを選択または入力してください",
+  "msg_required_job": "職務コードを入力してください",
+  "msg_required_job_select": "職務コードを選択または入力してください",
+  "msg_select_row": "行を選択してください",
+  "msg_update_done": "更新完了",
+  "date_placeholder": "YYYY-MM-DD",
   "area_window_title": "エリア保守",
   "section_window_title": "部門保守",
   "job_window_title": "職務/Function 保守",
