--- a/i18n/strings_zh.json
+++ b/i18n/strings_zh.json
@@ -40,6 +40,31 @@
   "msg_account_invalid": "帳號不存在或未啟用",
   "msg_password_invalid": "密碼錯誤",
   "msg_export_csv_done": "CSV 已匯出至：{path}",
+  "education_window_title": "學歷 / 畢業資訊",
+  "filter_all": "全部",
+  "filter_edu": "依學歷篩選",
+  "filter_school": "依學校篩選",
+  "filter_major": "依科系篩選",
+  "authority_window_title": "權限管理",
+  "basic_window_title": "員工主檔 / 基本資料",
+  "certify_items_window_title": "證照設定",
+  "custom_export_window_title": "自訂查詢 / 匯出",
+  "overdue_window_title": "到期檢核",
+  "personal_window_title": "個人資訊 / 聯絡方式",
+  "training_report_window_title": "訓練報表",
+  "placeholder_account": "帳號",
+  "placeholder_password_keep": "密碼（留空不變更）",
+  "msg_account_select": "請先選擇或輸入帳號",
+  "msg_emp_required": "員工編號必填",
+  "msg_required_basic_fields": "員工編號 / 部門 / 姓名 必填",
+  "msg_required_certify_id": "證照代碼必填",
+  "msg_required_emp_cert": "員工編號 / 證照代碼 必填",
+  "msg_required_emp_select": "請先選擇或輸入員工編號",
+  "msg_required_job": "請輸入職務代碼",
+  "msg_required_job_select": "請先選擇或輸入職務代碼",
+  "msg_select_row": "請先選擇一列",
+  "msg_update_done": "更新完成",
+  "date_placeholder": "YYYY-MM-DD",
   "area_window_title": "區域維護",
   "section_window_title": "部門維護",
   "job_window_title": "職務/Function 維護",
