--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -1,6 +1,6 @@
 ﻿{
-  "title": "HRMS_NEW - HR & Training",
-  "heading": "HRMS_NEW Human Resources & Training",
+  "title": "HRMS - HR & Training",
+  "heading": "HRMS Human Resources & Training",
   "sub": "Core: employee master/personal/education, certification setup & records, authority, reports, overdue check. Backend: SQLite.",
   "section_employee": "Employee",
   "employee_basic": "Employee Master / Basic",
@@ -65,6 +65,7 @@
   "msg_select_row": "Please select a row",
   "msg_update_done": "Update completed",
   "date_placeholder": "YYYY-MM-DD",
+  "edit_section": "Edit Section",
   "area_window_title": "Area Maintenance",
   "section_window_title": "Department Maintenance",
   "job_window_title": "Function Maintenance",
