--- a/i18n/strings_ja.json
+++ b/i18n/strings_ja.json
@@ -1,6 +1,6 @@
 {
-  "title": "HRMS_NEW 人事・訓練管理",
-  "heading": "HRMS_NEW 人力資源と訓練管理",
+  "title": "HRMS 人事・訓練管理",
+  "heading": "HRMS 人力資源と訓練管理",
   "sub": "中核機能：社員マスタ・個人情報・学歴、証照設定/記録、権限、レポート、期限チェック。バックエンド：SQLite。",
   "section_employee": "社員情報",
   "employee_basic": "社員マスタ / 基本資料",
@@ -65,6 +65,7 @@
   "msg_select_row": "行を選択してください",
   "msg_update_done": "更新完了",
   "date_placeholder": "YYYY-MM-DD",
+  "edit_section": "編集エリア",
   "area_window_title": "エリア保守",
   "section_window_title": "部門保守",
   "job_window_title": "職務/Function 保守",
