optimized the interface

--- a/i18n/strings_ja.json
+++ b/i18n/strings_ja.json
@@ -21,10 +21,13 @@
   "lang_label": "言語",
   "status_ready": "準備完了",
   "status_user_version": "ユーザー：{user} | バージョン：{version}",
+  "status_credit": "Created by Pigo Hsiao",
   "btn_fullscreen": "全画面",
   "theme_label": "テーマ",
   "theme_light": "ライト",
   "theme_dark": "ダーク",
+  "nav_collapse": "折りたたむ",
+  "nav_expand": "展開",
   "refresh": "更新",
   "export_csv": "CSV 出力",
   "only_active": "有効のみ",
