--- a/i18n/strings_zh.json
+++ b/i18n/strings_zh.json
@@ -21,10 +21,13 @@
   "lang_label": "介面語言",
   "status_ready": "就緒",
   "status_user_version": "使用者：{user} | 版本：{version}",
+  "status_credit": "Created by Pigo Hsiao",
   "btn_fullscreen": "全螢幕",
   "theme_label": "主題",
   "theme_light": "明亮版",
   "theme_dark": "黑暗版",
+  "nav_collapse": "收合",
+  "nav_expand": "展開",
   "refresh": "重新整理",
   "export_csv": "匯出 CSV",
   "only_active": "只顯示啟用",
