--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -21,10 +21,13 @@
   "lang_label": "Language",
   "status_ready": "Ready",
   "status_user_version": "User: {user} | Version: {version}",
+  "status_credit": "Created by Pigo Hsiao",
   "btn_fullscreen": "Full Screen",
   "theme_label": "Theme",
   "theme_light": "Light",
   "theme_dark": "Dark",
+  "nav_collapse": "Collapse",
+  "nav_expand": "Expand",
   "refresh": "Refresh",
   "export_csv": "Export CSV",
   "only_active": "Only Active",
