Split name and optimized the interface

--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -59,7 +59,7 @@
   "placeholder_password_keep": "Password (leave blank to keep)",
   "msg_account_select": "Please select or enter an account",
   "msg_emp_required": "Employee ID is required",
-  "msg_required_basic_fields": "EMP_ID / Dept / Name required",
+  "msg_required_basic_fields": "EMP_ID / Dept / Last name required",
   "msg_required_certify_id": "Certify ID is required",
   "msg_required_emp_cert": "EMP_ID / Certify ID required",
   "msg_required_emp_select": "Please select or enter EMP_ID",
@@ -79,6 +79,8 @@
   "col_dept_code": "Dept Code",
   "col_dept_desc": "Dept Name",
   "col_c_name": "Name",
+  "col_last_name": "Last Name",
+  "col_first_name": "First Name",
   "col_title": "Title",
   "col_on_board_date": "On Board",
   "col_shift": "Shift",
