--- a/i18n/strings_ja.json
+++ b/i18n/strings_ja.json
@@ -59,7 +59,7 @@
   "placeholder_password_keep": "パスワード（空欄は変更なし）",
   "msg_account_select": "アカウントを選択または入力してください",
   "msg_emp_required": "社員IDは必須です",
-  "msg_required_basic_fields": "社員ID / 部門 / 氏名は必須です",
+  "msg_required_basic_fields": "社員ID / 部門 / 姓は必須です",
   "msg_required_certify_id": "証照IDは必須です",
   "msg_required_emp_cert": "社員ID / 証照ID は必須です",
   "msg_required_emp_select": "社員IDを選択または入力してください",
@@ -79,6 +79,8 @@
   "col_dept_code": "部門コード",
   "col_dept_desc": "部門名",
   "col_c_name": "氏名",
+  "col_last_name": "姓",
+  "col_first_name": "名",
   "col_title": "職位",
   "col_on_board_date": "入社日",
   "col_shift": "シフト",
