--- a/i18n/strings_zh.json
+++ b/i18n/strings_zh.json
@@ -59,7 +59,7 @@
   "placeholder_password_keep": "密碼（留空不變更）",
   "msg_account_select": "請先選擇或輸入帳號",
   "msg_emp_required": "員工編號必填",
-  "msg_required_basic_fields": "員工編號 / 部門 / 姓名 必填",
+  "msg_required_basic_fields": "員工編號 / 部門 / 姓氏 必填",
   "msg_required_certify_id": "證照代碼必填",
   "msg_required_emp_cert": "員工編號 / 證照代碼 必填",
   "msg_required_emp_select": "請先選擇或輸入員工編號",
@@ -79,6 +79,8 @@
   "col_dept_code": "部門代碼",
   "col_dept_desc": "部門名稱",
   "col_c_name": "姓名",
+  "col_last_name": "姓氏",
+  "col_first_name": "名字",
   "col_title": "職稱",
   "col_on_board_date": "到職日",
   "col_shift": "班別",
